--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <body>
     <p>Manage Download</p>
     <label class="switch">
-      <input type="checkbox">
+      <input type="checkbox" id="specific-path">
       <span class="slider round"></span>
     </label>
   </body>
