--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <title>Download Box</title>
     <script src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>Manage Download</p>
