--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,23 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Manage Download</p>
+    Manage Download
+    <br>
+    Boxed
     <label class="switch">
-      <input type="checkbox" id="specific-path">
+      <input type="checkbox" id="boxed">
+      <span class="slider round"></span>
+    </label>
+    
+    Date Boxed
+    <label class="switch">
+      <input type="checkbox" id="date-boxed">
+      <span class="slider round"></span>
+    </label>
+
+    Turn Off
+    <label class="switch">
+      <input type="checkbox" id="turn-off">
       <span class="slider round"></span>
     </label>
   </body>
