--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Download Box</title>
-    <script src="popup.js"></script>
+    <script src="popup.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap" rel="stylesheet">
   </head>
