Some css fixing

--- a/popup.html
+++ b/popup.html
@@ -7,24 +7,31 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap" rel="stylesheet">
   </head>
   <body>
-    Manage Download
-    <br>
-    Boxed
-    <label class="switch">
-      <input type="checkbox" id="boxed">
-      <span class="slider round"></span>
-    </label>
-    
-    Date Boxed
-    <label class="switch">
-      <input type="checkbox" id="date-boxed">
-      <span class="slider round"></span>
-    </label>
 
-    Turn Off
-    <label class="switch">
-      <input type="checkbox" id="turn-off">
-      <span class="slider round"></span>
-    </label>
+    <div class="container">
+      <div class="sector">
+        <p class="name">Boxed</p>
+        <label class="switch">
+          <input type="checkbox" id="boxed">
+          <span class="slider round"></span>
+        </label>
+      </div>
+
+      <div class="sector">
+        <p class="name">Date Boxed</p>
+        <label class="switch">
+          <input type="checkbox" id="date-boxed">
+          <span class="slider round"></span>
+        </label>
+      </div>
+
+      <div class="sector">
+        <p class="name">Turn Off</p>
+        <label class="switch">
+          <input type="checkbox" id="turn-off">
+          <span class="slider round"></span>
+        </label> 
+      </div>
+    </div>
   </body>
 </html>
