getting used to chrome storage

--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,14 @@
       <div class="sector">
         <p class="name">Boxed</p>
         <label class="switch">
-          <input type="checkbox" id="boxed">
+          <input type="checkbox" id="boxed" value="sBox">
           <span class="slider round"></span>
         </label>
+      </div>
+
+      <div class="sector">
+        <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
+        <ul id="listing"></ul>
       </div>
 
       <div class="sector">
