trying get setting page setup

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,10 @@
   <body>
     <div class="container">
       <div class="sector">
+        <input type="button" id="setting" />
+      </div>
+
+      <div class="sector">
         <p class="name">Boxed</p>
         <label class="switch">
           <input type="checkbox" id="boxed" value="sBox" />
