got eventlistner to work but actually need new tab to work

--- a/setting.html
+++ b/setting.html
@@ -11,7 +11,6 @@
     </head>
 
     <body>
-        <h1>DownBox Setting</h1>
-        <input type="button" id="go-back" />
+        <p>Setting</p>
     </body>
 </html>
